--- a/base/global/base.html
+++ b/base/global/base.html
@@ -1,6 +1,9 @@
 {% include "global/partials/head.html" %}
 {% include "global/partials/menu.html" %}
 
-    <h1>{% block texto %} BASE {% endblock texto %}</h1>
-</body>
+        <h1>{% block texto %}{% endblock texto %}</h1>
+        <main class="posts">
+            {% include "global/partials/postblock.html" %}
+        </main>
+    </body>
 </html>
