--- a/base/global/base.html
+++ b/base/global/base.html
@@ -2,8 +2,10 @@
 {% include "global/partials/menu.html" %}
 
         <h1>{% block texto %}{% endblock texto %}</h1>
-        <main class="posts">
-            {% include "global/partials/postblock.html" %}
+
+        <main class="content">
+            {% block posts %}{% endblock posts %}
+            {% block home %}{% endblock home %}
         </main>
     </body>
 </html>
